fix: improve formatting and tests